<resources>
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>

    <string name="app_name">FitforFit</string>
    <string name="tab_text_1">Tracker</string>
    <string name="tab_text_2">Workout</string>
    <string name="tracker_name">Ernährungstracker</string>
    <string name="workout_name">Workoutplaner</string>
    <string name="day_tab_text_1">Stats</string>
    <string name="day_tab_text_2">Meals</string>
    <string name="day_tab_text_3">More</string>
    <string name="new_workout_button">Neues Workout anlegen</string>

    <string name="activity_new_workout_message">Name des Workouts</string>
    <string name="title_activity_sacn">SacnActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="activity_new_exercise_message">Name der Übung</string>
    <string name="btn_add_exercise">Übung hinzufügen</string>
    <string name="workout_detail_no_exercises">Das Workout hat noch keine Übungen.</string>
    <string name="add_exercise_to_workout_no_exercises">Es wurden noch keine Übungen angelegt.</string>
    <string name="create_new_exercise">Neue Übung anlegen</string>
    <string name="prev">Zurück</string>
    <string name="next">Weiter</string>
    <string name="finished">Fertig</string>
    <string name="reps">Wiederholungen:</string>
    <string name="weight">Gewicht:</string>
    <string name="kilo">kg</string>
    <string name="add_set">Satz hinzufügen</string>

    <string name="workout_stats_tab1">Auswertung</string>
    <string name="workout_stats_tab2">Verlauf</string>
    <string name="stats">Statistiken</string>
    <string name="exercise_option_rename">Umbenennen</string>
    <string name="exercise_option_delete_assignment">Aus Workout entfernen</string>
    <string name="exercise_option_delete">Löschen</string>
    <string name="tripleDots">⋮</string>
    <string name="renameWorkout">Umbenennen</string>
    <string name="deleteWorkout">Löschen</string>
    <string name="removeTrainingSet">Entfernen</string>
    <string name="workout_progress_fragment_prev_sessions">Zuletzt absolvierte Workouts</string>
    <string name="workoutplaner">Workoutplaner</string>
    <string name="info">Info</string>

</resources>